--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(/weather-background.jpeg);
+    background-image: url(./weather-background.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -31,7 +31,7 @@ body {
     width: 100%;
     max-width: 320px;
     height: 80vh;
-    background: url(/weather-background.jpeg)no-repeat center;
+    background: url(weather-background.jpeg)no-repeat center;
     background-size: cover;
     border-radius: 10px;
     overflow: hidden;
